--- a/index.html
+++ b/index.html
@@ -4,32 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="page-header">
+      <nav class="nav">
+        <a class="logo header-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <ul class="nav-list">
+          <li class="item-nav-list">
+            <a class="nav-link" href="./index.html">Studio</a>
+          </li>
+          <li class="item-nav-list">
+            <a class="nav-link" href="">Portfolio</a>
+          </li>
+          <li class="item-nav-list">
+            <a class="nav-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="Contacts">
+        <ul class="Contacts-list">
+          <li class="Contacts-item">
+            <a class="Contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="Contacts-item">
+            <a class="Contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section1">
+        <h1 class="header1">Effective Solutions for Your Business</h1>
+        <button class="button-section1" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Our Features</h2>
+      <section class="section2">
+        <h2 class="header2-section2">Our Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -61,54 +91,122 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="section3">
+        <h2 class="header2-section3">Our Team</h2>
         <ul>
-          <li>
+          <li class="list-item-sec3">
             <img
               src="images/img.jpg"
               alt="Product Designer"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="position">Product Designer</p>
           </li>
-          <li>
+          <li class="list-item-sec3">
             <img
               src="images/img-2.jpg"
               alt="Frontend Developer"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-item-sec3">
             <img
               src="images/img-3.jpg"
               alt="Marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="position">Marketing</p>
           </li>
-          <li>
+          <li class="list-item-sec3">
             <img
               src="images/img-4.jpg"
               alt="UI Designer"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="images/img-5.jpg"
+              alt="Banking App"
+              width="264"
+              height="260"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="images/img-6.jpg"
+              alt="Cashless Payment"
+              width="264"
+              height="260"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/img-7.jpg"
+              alt="Meditation App"
+              width="264"
+              height="260"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="images/img-8.jpg"
+              alt="Taxi Service"
+              width="264"
+              height="260"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/img-9.jpg"
+              alt="Screen Illustrations"
+              width="264"
+              height="260"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="images/img-10.jpg"
+              alt="Online Courses"
+              width="264"
+              height="260"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="page-footer">
+      <nav class="nav">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part-footer">Studio</span></a
+        >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
