--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
     <footer class="page-footer">
       <nav class="nav">
         <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part-footer">Studio</span></a
-        >
+          >Web<span class="logo-part-footer">Studio</span>
+        </a>
+      </nav>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
