--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul>
           <li class="list-item-sec3">
             <img
-              src="images/img.jpg"
+              src="./images/img.jpg"
               alt="Product Designer"
               width="264"
               height="260"
@@ -106,7 +106,7 @@
           </li>
           <li class="list-item-sec3">
             <img
-              src="images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Frontend Developer"
               width="264"
               height="260"
@@ -116,7 +116,7 @@
           </li>
           <li class="list-item-sec3">
             <img
-              src="images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Marketing"
               width="264"
               height="260"
@@ -126,7 +126,7 @@
           </li>
           <li class="list-item-sec3">
             <img
-              src="images/img-4.jpg"
+              src="./images/img-4.jpg"
               alt="UI Designer"
               width="264"
               height="260"
@@ -141,7 +141,7 @@
         <ul>
           <li>
             <img
-              src="images/img-5.jpg"
+              src="./images/img-5.jpg"
               alt="Banking App"
               width="264"
               height="260"
@@ -151,7 +151,7 @@
           </li>
           <li>
             <img
-              src="images/img-6.jpg"
+              src="./images/img-6.jpg"
               alt="Cashless Payment"
               width="264"
               height="260"
@@ -160,18 +160,13 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="images/img-7.jpg"
-              alt="Meditation App"
-              width="264"
-              height="260"
-            />
+            <img src="./" alt="Meditation App" width="264" height="260" />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
             <img
-              src="images/img-8.jpg"
+              src="./images/img-8.jpg"
               alt="Taxi Service"
               width="264"
               height="260"
@@ -181,7 +176,7 @@
           </li>
           <li>
             <img
-              src="images/img-9.jpg"
+              src="./images/img-9.jpg"
               alt="Screen Illustrations"
               width="264"
               height="260"
@@ -191,7 +186,7 @@
           </li>
           <li>
             <img
-              src="images/img-10.jpg"
+              src="./images/img-10.jpg"
               alt="Online Courses"
               width="264"
               height="260"
