--- a/index.html
+++ b/index.html
@@ -160,7 +160,12 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./" alt="Meditation App" width="264" height="260" />
+            <img
+              src="./images/img-7.jpg"
+              alt="Meditation App"
+              width="264"
+              height="260"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
