--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </nav>
       <p>
         Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        marketing &amp; growth solutions.
       </p>
     </footer>
   </body>
