--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&family=Roboto:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -98,8 +98,8 @@
             <img
               src="./images/img.jpg"
               alt="Product Designer"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3 class="name">Mark Guerrero</h3>
             <p class="position">Product Designer</p>
@@ -108,8 +108,8 @@
             <img
               src="./images/img-2.jpg"
               alt="Frontend Developer"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3 class="name">Tom Ford</h3>
             <p class="position">Frontend Developer</p>
@@ -118,8 +118,8 @@
             <img
               src="./images/img-3.jpg"
               alt="Marketing"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3 class="name">Camila Garcia</h3>
             <p class="position">Marketing</p>
@@ -128,8 +128,8 @@
             <img
               src="./images/img-4.jpg"
               alt="UI Designer"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3 class="name">Daniel Wilson</h3>
             <p class="position">UI Designer</p>
@@ -143,8 +143,8 @@
             <img
               src="./images/img-5.jpg"
               alt="Banking App"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3>Banking App</h3>
             <p>App</p>
@@ -153,8 +153,8 @@
             <img
               src="./images/img-6.jpg"
               alt="Cashless Payment"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
@@ -163,8 +163,8 @@
             <img
               src="./images/img-7.jpg"
               alt="Meditation App"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3>Meditation App</h3>
             <p>App</p>
@@ -173,8 +173,8 @@
             <img
               src="./images/img-8.jpg"
               alt="Taxi Service"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
@@ -183,8 +183,8 @@
             <img
               src="./images/img-9.jpg"
               alt="Screen Illustrations"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
@@ -193,8 +193,8 @@
             <img
               src="./images/img-10.jpg"
               alt="Online Courses"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
             <h3>Online Courses</h3>
             <p>Marketing</p>
