--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         </ul>
       </nav>
 
-      <address class="Contacts">
-        <ul class="Contacts-list">
-          <li class="Contacts-item">
-            <a class="Contacts-link" href="mailto:info@devstudio.com"
+      <address class="contacts">
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="Contacts-item">
-            <a class="Contacts-link" href="tel:+110001111111"
+          <li class="contacts-item">
+            <a class="contacts-link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -54,12 +54,12 @@
       </address>
     </header>
     <main>
-      <section class="section1">
-        <h1 class="header1">Effective Solutions for Your Business</h1>
-        <button class="button-section1" type="button">Order Service</button>
+      <section class="section-one">
+        <h1 class="header-one">Effective Solutions for Your Business</h1>
+        <button class="button-section-one" type="button">Order Service</button>
       </section>
-      <section class="section2">
-        <h2 class="header2-section2">Our Features</h2>
+      <section class="section-two">
+        <h2 class="section-title">Our Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -91,45 +91,45 @@
           </li>
         </ul>
       </section>
-      <section class="section3">
-        <h2 class="header2-section3">Our Team</h2>
+      <section class="section-three">
+        <h2 class="section-title">Our Team</h2>
         <ul>
-          <li class="list-item-sec3">
+          <li class="list-item-sec-three">
             <img
               src="./images/img.jpg"
               alt="Product Designer"
-              width="360"
-              height="300"
+              width="264"
+              height="260"
             />
             <h3 class="name">Mark Guerrero</h3>
             <p class="position">Product Designer</p>
           </li>
-          <li class="list-item-sec3">
+          <li class="list-item-sec-three">
             <img
               src="./images/img-2.jpg"
               alt="Frontend Developer"
-              width="360"
-              height="300"
+              width="264"
+              height="260"
             />
             <h3 class="name">Tom Ford</h3>
             <p class="position">Frontend Developer</p>
           </li>
-          <li class="list-item-sec3">
+          <li class="list-item-sec-three">
             <img
               src="./images/img-3.jpg"
               alt="Marketing"
-              width="360"
-              height="300"
+              width="264"
+              height="260"
             />
             <h3 class="name">Camila Garcia</h3>
             <p class="position">Marketing</p>
           </li>
-          <li class="list-item-sec3">
+          <li class="list-item-sec-three">
             <img
               src="./images/img-4.jpg"
               alt="UI Designer"
-              width="360"
-              height="300"
+              width="264"
+              height="260"
             />
             <h3 class="name">Daniel Wilson</h3>
             <p class="position">UI Designer</p>
@@ -137,7 +137,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -208,7 +208,7 @@
           >Web<span class="logo-part-footer">Studio</span>
         </a>
       </nav>
-      <p>
+      <p class="p-footer">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
